// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FlexGrid allows the limitWidth prop to be unset 1`] = `
<styled.div
  limitWidth={false}
  outsideGutter={true}
  reverseLevel={
    Array [
      false,
      false,
      false,
      false,
      false,
    ]
  }
>
  <div
    className="sc-dmqHEX jRLGbF"
  >
    <Row
      id="row-1"
    >
      <styled.div
        id="row-1"
        reverseLevel={
          Array [
            false,
            false,
            false,
            false,
            false,
          ]
        }
      >
        <div
          className="sc-gueYoa eeiOgy"
          id="row-1"
        >
          <Col
            id="col-1"
          >
            <styled.div
              gutter={true}
              hiddenLevel={
                Array [
                  false,
                  false,
                  false,
                  false,
                  false,
                ]
              }
              horizontalAlignLevel={
                Array [
                  "inherit",
                  "inherit",
                  "inherit",
                  "inherit",
                  "inherit",
                ]
              }
              id="col-1"
              xs={true}
            >
              <div
                className="sc-beqWaB iZDimM"
                id="col-1"
              >
                1st column content
              </div>
            </styled.div>
          </Col>
          <Col
            id="col-2"
          >
            <styled.div
              gutter={true}
              hiddenLevel={
                Array [
                  false,
                  false,
                  false,
                  false,
                  false,
                ]
              }
              horizontalAlignLevel={
                Array [
                  "inherit",
                  "inherit",
                  "inherit",
                  "inherit",
                  "inherit",
                ]
              }
              id="col-2"
              xs={true}
            >
              <div
                className="sc-beqWaB iZDimM"
                id="col-2"
              >
                2nd column content
              </div>
            </styled.div>
          </Col>
        </div>
      </styled.div>
    </Row>
  </div>
</styled.div>
`;

exports[`FlexGrid can have limited width at various viewport sizes 1`] = `
<styled.div
  limitWidth={true}
  outsideGutter={true}
  reverseLevel={
    Array [
      false,
      false,
      false,
      false,
      false,
    ]
  }
>
  <div
    className="sc-dmqHEX jCylam"
  >
    <Row
      id="row-1"
    >
      <styled.div
        id="row-1"
        reverseLevel={
          Array [
            false,
            false,
            false,
            false,
            false,
          ]
        }
      >
        <div
          className="sc-gueYoa eeiOgy"
          id="row-1"
        >
          <Col
            id="col-1"
          >
            <styled.div
              gutter={true}
              hiddenLevel={
                Array [
                  false,
                  false,
                  false,
                  false,
                  false,
                ]
              }
              horizontalAlignLevel={
                Array [
                  "inherit",
                  "inherit",
                  "inherit",
                  "inherit",
                  "inherit",
                ]
              }
              id="col-1"
              xs={true}
            >
              <div
                className="sc-beqWaB iZDimM"
                id="col-1"
              >
                1st column content
              </div>
            </styled.div>
          </Col>
          <Col
            id="col-2"
          >
            <styled.div
              gutter={true}
              hiddenLevel={
                Array [
                  false,
                  false,
                  false,
                  false,
                  false,
                ]
              }
              horizontalAlignLevel={
                Array [
                  "inherit",
                  "inherit",
                  "inherit",
                  "inherit",
                  "inherit",
                ]
              }
              id="col-2"
              xs={true}
            >
              <div
                className="sc-beqWaB iZDimM"
                id="col-2"
              >
                2nd column content
              </div>
            </styled.div>
          </Col>
        </div>
      </styled.div>
    </Row>
  </div>
</styled.div>
`;

exports[`FlexGrid renders 1`] = `
<div
  class="sc-dmqHEX jCylam"
>
  <div
    class="sc-gueYoa eeiOgy"
  >
    <div
      class="sc-beqWaB iZDimM"
    >
      1st column content
    </div>
    <div
      class="sc-beqWaB iZDimM"
    >
      2nd column content
    </div>
  </div>
</div>
`;

exports[`FlexGrid renders with no outside gutter 1`] = `
<styled.div
  limitWidth={true}
  outsideGutter={false}
  reverseLevel={
    Array [
      false,
      false,
      false,
      false,
      false,
    ]
  }
>
  <div
    className="sc-dmqHEX cIyRso"
  >
    <Row
      id="row-1"
    >
      <styled.div
        id="row-1"
        reverseLevel={
          Array [
            false,
            false,
            false,
            false,
            false,
          ]
        }
      >
        <div
          className="sc-gueYoa eeiOgy"
          id="row-1"
        >
          <Col
            id="col-1"
          >
            <styled.div
              gutter={true}
              hiddenLevel={
                Array [
                  false,
                  false,
                  false,
                  false,
                  false,
                ]
              }
              horizontalAlignLevel={
                Array [
                  "inherit",
                  "inherit",
                  "inherit",
                  "inherit",
                  "inherit",
                ]
              }
              id="col-1"
              xs={true}
            >
              <div
                className="sc-beqWaB iZDimM"
                id="col-1"
              >
                1st column content
              </div>
            </styled.div>
          </Col>
          <Col
            id="col-2"
          >
            <styled.div
              gutter={true}
              hiddenLevel={
                Array [
                  false,
                  false,
                  false,
                  false,
                  false,
                ]
              }
              horizontalAlignLevel={
                Array [
                  "inherit",
                  "inherit",
                  "inherit",
                  "inherit",
                  "inherit",
                ]
              }
              id="col-2"
              xs={true}
            >
              <div
                className="sc-beqWaB iZDimM"
                id="col-2"
              >
                2nd column content
              </div>
            </styled.div>
          </Col>
        </div>
      </styled.div>
    </Row>
  </div>
</styled.div>
`;

exports[`FlexGrid supports responsive reversal 1`] = `
<styled.div
  limitWidth={true}
  outsideGutter={true}
  reverseLevel={
    Array [
      true,
      true,
      true,
      false,
      true,
    ]
  }
>
  <div
    className="sc-dmqHEX gxOGum"
  >
    <Row
      id="row-1"
    >
      <styled.div
        id="row-1"
        reverseLevel={
          Array [
            false,
            false,
            false,
            false,
            false,
          ]
        }
      >
        <div
          className="sc-gueYoa eeiOgy"
          id="row-1"
        >
          <Col
            id="col-1"
          >
            <styled.div
              gutter={true}
              hiddenLevel={
                Array [
                  false,
                  false,
                  false,
                  false,
                  false,
                ]
              }
              horizontalAlignLevel={
                Array [
                  "inherit",
                  "inherit",
                  "inherit",
                  "inherit",
                  "inherit",
                ]
              }
              id="col-1"
              xs={true}
            >
              <div
                className="sc-beqWaB iZDimM"
                id="col-1"
              >
                1st column content
              </div>
            </styled.div>
          </Col>
          <Col
            id="col-2"
          >
            <styled.div
              gutter={true}
              hiddenLevel={
                Array [
                  false,
                  false,
                  false,
                  false,
                  false,
                ]
              }
              horizontalAlignLevel={
                Array [
                  "inherit",
                  "inherit",
                  "inherit",
                  "inherit",
                  "inherit",
                ]
              }
              id="col-2"
              xs={true}
            >
              <div
                className="sc-beqWaB iZDimM"
                id="col-2"
              >
                2nd column content
              </div>
            </styled.div>
          </Col>
        </div>
      </styled.div>
    </Row>
  </div>
</styled.div>
`;
